--- a/waxom.html
+++ b/waxom.html
@@ -27,9 +27,9 @@
             <nav>
                 <div class="main-menu">
             <ul class="about">
-                <li><a href="">Home</a></li>
+                <li><a href="">about us</a></li>
                 <li><a href="">About Us</a></li>
-                <li><a href="">Portfolio</a></li>
+                <li><a href="">about us</a></li>
                 <li><a href="">Features</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">Pricing</a></li>
