--- a/waxom.html
+++ b/waxom.html
@@ -27,8 +27,8 @@
             <nav>
                 <div class="main-menu">
             <ul class="about">
-                <li><a href="">about us</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="">jajaa</a></li>
+                <li><a href="">past left</a></li>
                 <li><a href="">about us</a></li>
                 <li><a href="">Features</a></li>
                 <li><a href="">Blog</a></li>
